🐛 Fix ark ui positioning z-index stacking clash with chakra

--- a/apps/builder/src/assets/styles/globals.css
+++ b/apps/builder/src/assets/styles/globals.css
@@ -12,3 +12,12 @@
 typebot-standard#onboarding::part(progress-bar-container) {
   top: 55px;
 }
+
+body {
+  isolation: isolate;
+}
+
+/* Keep this as long as we use Chakra portalled element, they apply a z-index of 10. We need to match it to avoid z-index stacking issues */
+.ark-positioner-z-10 {
+  z-index: 10 !important;
+}
